--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,3 +18,5 @@
 <!-- Custom styles for this template-->
 <link href="/stylesheets/css/style.css" rel="stylesheet">
 <link href="/stylesheets/css/sb-admin-2.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="/stylesheets/css/toastr.css">
