--- a/views/login/loginscripts.ejs
+++ b/views/login/loginscripts.ejs
@@ -25,7 +25,7 @@
                           if (result.msg == 'success') {
                             $('#username').val('');
                             $('#password').val('');
-                            success('Logged In', 'Successfully').then(() => {
+                            successlogin('Logged In', 'Successfully').then(() => {
                                 location.replace("/");
                             })
                               
