--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -102,7 +102,7 @@
                     const tr = document.createElement('tr');
                     tr.innerHTML = `
                         <td class="custom-mobile-align bmss-link" data-toggle="modal" data-target="#sales-details-modal" data-label="Detail ID">${item.detailid}</td>
-                        <td class="custom-mobile-align" data-label="Date">${item.date}</td>
+                        <td class="custom-mobile-align responsive-wrap" data-label="Date">${item.date}</td>
                         <td class="custom-mobile-align" data-label="POS ID">${item.posid}</td>
                         <td class="custom-mobile-align" data-label="Shift">${item.shift}</td>
                         <td class="custom-mobile-align" data-label="Payment Type">${item.paymenttype}</td>
