--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -1,4 +1,5 @@
-<div class="modal fade " id="materialcount-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade " id="materialcount-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
@@ -14,21 +15,22 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive scrollable-table-container">
-                            <table class="table table-bordered custom-mobile-table" id="transferdetails-dataTable" width="100%" cellspacing="10">
+                            <table class="table table-bordered custom-mobile-table" id="transferdetails-dataTable"
+                                width="100%" cellspacing="10">
                                 <thead class="table-header">
                                     <tr>
-                                        <th class = "col-1">Item ID</th>
-                                        <th class = "col-3">Transfer ID</th>
-                                        <th class = "col-3">Product ID</th>
-                                        <th class = "col-3">Description</th>
-                                        <th class = "col-2">Quantity</th>             
+                                        <th class="col-1">Item ID</th>
+                                        <th class="col-3">Transfer ID</th>
+                                        <th class="col-3">Product ID</th>
+                                        <th class="col-3">Description</th>
+                                        <th class="col-2">Quantity</th>
                                     </tr>
-                                </thead>          
+                                </thead>
                                 <tbody>
                                 </tbody>
                             </table>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -43,123 +45,119 @@
 <div class="container-fluid">
     <!-- Content Row -->
     <div class="toggle-view">
-        <div class="card mb-2">
-            <div class="card-header py-3 header-bg">
-                <h6 class="m-0 font-weight-bold">Transfer Order</h6>
-            </div>
-            <div class="card-body extend">
-                <div class="row mb-2 justify-content-cente      r">
-                    <div class="col-6">
-                        <label class="">Product</label>
-                        <select class="form-control text-center" name="productlists" id="productlists">
-                            <option value="">-- Select here --</option>
-                        </select>  
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col mb-2">
-                        <label for="productquantities">Quantity</label>
-                        <input id="quantity" name="quantity" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
-                    </div>
-                    <div class="col">
-                        <label for="productquantities">Unit</label>
-                        <input id="unit" name="unit" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
-                    </div>
-                </div>
-                <div class="row justify-content-end mb-2">
-                    <div class="col-4">
-                        <button id="addproduct" name="addproduct" class="btn btn-sm btn-outline-inventory shadow-sm w-100">
-                            <i class="fa fa-plus" aria-hidden="true"></i>
-                            ADD
-                        </button>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <div class="table-responsive scrollable-table-container-sm table-size">
-                            <table class="table table-bordered custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
-                                <thead class="table-header">
-                                    <tr>
-                                        <th class = "col-2">Product ID</th> 
-                                        <th class = "col-2">Unit</th> 
-                                        <th class = "col-2">Quantity</th>   
-                                        <th class = "col-1">Action</th>        
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <td colspan="3" class="text-right">Total Quantity:</td>
-                                        <td id="total-quantity" colspan="1">0</td>
-                                    </tr>
-                                </tfoot>
-                            </table>
+        <div class="row mb-1">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header header-bg">
+                        <div class="row">
+                            <div class="col">
+                                <h6 class="m-0 font-weight-bold mt-2">Components</h6>
+                            </div>
                         </div>
-                        <div class="row justify-content-end">
-                            <div class="col-md-4">
-                                <button id="submitBtn" name="submitBtn" class="btn btn-outline-inventory shadow-sm w-100">
-                                    SUBMIT
-                                </button>
+                    </div>
+                    <div class="card-body extend">
+                        <div class="row">
+                            <div class="col">
+                                <div class="table-responsive scrollable-table-container-sm table-size">
+                                    <table class="table table-bordered custom-mobile-table" id="materials-datatable"
+                                        width="100%" cellspacing="10">
+                                        <thead class="table-header">
+                                            <tr>
+                                                <th class="col-2">Material Name</th>
+                                                <th class="col-1">Material ID</th>
+                                                <th class="col-1">Unit</th>
+                                                <th class="col-1">Quantity</th>
+                                                <th class="col-1">Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td data-label="Material Name" class="custom-mobile-align">
+                                                    <select class="form-control text-center" name="materiallists"
+                                                        id="materiallists">
+                                                        <option value="">Select Material</option>
+                                                    </select>
+                                                </td>
+                                                <td data-label="Material ID"
+                                                    class="custom-mobile-align material-id materialid"></td>
+                                                <td data-label="Unit" class="custom-mobile-align units unit"></td>
+                                                <td data-label="Quantity" class="custom-mobile-align">
+                                                    <div class="row justify-content-center"><input id="quantity"
+                                                            name="quantity" type="number" class="form-control w-50"
+                                                            placeholder="0.00" value="" maxlength="8"></div>
+                                                <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
+                                            </tr>
+                                        </tbody>
+                                        <tfoot>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+    
+                        <div class="row justify-content-end mt-1">
+                            <div class="col-2">
+                                <button type="button" id="submitBtn" class="btn btn-outline-inventory">Update</button>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>      
-        </div>
-    </div>
-            
-<!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
-    <div class="progress progress-sm mb-2">
-        <div class="progress-bar" role="progressbar" style="width: 0%"
-            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-        </div>
-    </div>
-    <div class="card-header py-3 header-bg">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="row mb-2">
-                    <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
-                        <i class="fas fa-chevron-right"></i>
-                    </button>
-                    <h6 class="mt-2 ml-3 font-weight-bold table-title">Material Counts</h6>
-                </div>   
             </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
+        </div>
+    </div>
+
+    <!-- DataTales Example -->
+    <div class="card shadow mb-4 table-size">
+        <div class="progress progress-sm mb-2">
+            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
+                aria-valuemax="100">
+            </div>
+        </div>
+        <div class="card-header py-3 header-bg">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row mb-2">
+                        <button id="toggleButton" name="toggleButton"
+                            class=" ml-3 btn btn-circle btn-outline-inventory ">
+                            <i class="fas fa-chevron-right"></i>
                         </button>
+                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Material Counts</h6>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                            aria-label="Search" aria-describedby="basic-addon2" id="search-input">
+                        <div class="input-group-append">
+                            <button class="btn sis-btn-color" type="button" id="search-button">
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%" cellspacing="10">
-                <thead class="table-header">
-                    <tr>
-                        <th class = "col-1">Count ID</th>
-                        <th class = "col-2">Material Name</th>
-                        <th class = "col-2">Quantity</th>
-                        <th class = "col-1">Unit</th>
-                        <th class = "col-3">Created By</th>
-                        <th class = "col-1">Created Date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
-                    </tr>
-                </thead>
-                    
-                <tbody>
-                </tbody>
-            </table>
+        <div class="card-body">
+            <div class="table-responsive scrollable-table-container">
+                <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%"
+                    cellspacing="10">
+                    <thead class="table-header">
+                        <tr>
+                            <th class="col-1">Count ID</th>
+                            <th class="col-2">Material Name</th>
+                            <th class="col-2">Quantity</th>
+                            <th class="col-1">Unit</th>
+                            <th class="col-3">Created By</th>
+                            <th class="col-1">Created Date</th>
+                            <th class="col-1">Status</th>
+                            <th class="col-1">Action</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
-        
     </div>
-</div>
