Fix Submit data bug

--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -80,7 +80,7 @@
                                                 </td>
                                                 <td data-label="Material ID"
                                                     class="custom-mobile-align material-id materialid"></td>
-                                                <td data-label="Unit" class="custom-mobile-align units unit"></td>
+                                                <td data-label="Unit" class="custom-mobile-align units unit"><div class="row justify-content-center"><input name="unit" type="text" class="form-control w-100 mr-1 ml-1" id="unit" placeholder="Enter unit" value=""></div></td>
                                                 <td data-label="Quantity" class="custom-mobile-align">
                                                     <div class="row justify-content-center"><input id="quantity"
                                                             name="quantity" type="number" class="form-control w-50"
