--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -82,7 +82,7 @@
                         }
     
                         if (result.msg == 'exist') {
-                            warning('Exist', `${fullname} already exist!`);
+                            warning('Exist', `${productname} already exist!`);
                         }
     
                     },
