Fix Display of Shift Reports and added filter for table columns along with the file export

--- a/views/inventorycount/inventorycount.ejs
+++ b/views/inventorycount/inventorycount.ejs
@@ -185,13 +185,12 @@
             <table class="table table-bordered custom-mobile-table" id="transferorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Transfer ID</th>
-                        <th class = "col-2">Transfer From</th>
-                        <th class = "col-2">Transfer To</th>
-                        <th class = "col-1">Transfer Date</th>
-                        <th class = "col-1">Total Quantity</th>
+                        <th class = "col-1">Count ID</th>
+                        <th class = "col-2">Count Date</th>
+                        <th class = "col-2">Location ID</th>
+                        <th class = "col-1">Count By</th>
+                        <th class = "col-1">Count Verifcation</th>
                         <th class = "col-3">Notes</th>
-                        <th class = "col-1">Status</th>
                         <th class = "col-1">Action</th>               
                     </tr>
                 </thead>
