--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -51,7 +51,7 @@
                     <div class="card-header header-bg">
                         <div class="row">
                             <div class="col">
-                                <h6 class="m-0 font-weight-bold mt-2">Components</h6>
+                                <h6 class="m-0 font-weight-bold mt-2">Add Materials Quantity</h6>
                             </div>
                         </div>
                     </div>
