--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -61,9 +61,9 @@
             });
         });
 
-        function formatCurrency(amount) {
-            var formattedAmount = amount.toFixed(2);
-            return '₱' + formattedAmount;
+        function formatCurrency(value) {
+            var formattedValue = parseFloat(value).toFixed(2);
+            return '₱' + formattedValue.replace(/\d(?=(\d{3})+\.)/g, '$&,');
         }
 
         function getCurrentDate() {
@@ -107,7 +107,7 @@
                         <td class="custom-mobile-align" data-label="Shift">${item.shift}</td>
                         <td class="custom-mobile-align" data-label="Payment Type">${item.paymenttype}</td>
                         <td class="responsive-wrap">${newDescription}</td>
-                        <td class="custom-mobile-align" data-label="Total">₱ ${item.total}</td>
+                        <td class="custom-mobile-align" data-label="Total">${formatCurrency(item.total)}</td>
                         <td class="custom-mobile-align" data-label="Cashier">${item.cashier}</td>
                     `;
                     tableBody.appendChild(tr);
