Save changes for checkbox in local storage

--- a/views/productprice/productpricescripts.ejs
+++ b/views/productprice/productpricescripts.ejs
@@ -217,4 +217,28 @@
         }
     })
 
+    function saveCheckboxStates() {
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach((checkbox) => {
+            localStorage.setItem(checkbox.id, checkbox.checked);
+        });
+    }
+
+    function loadCheckboxStates() {
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach((checkbox) => {
+            const savedState = localStorage.getItem(checkbox.id);
+            if (savedState !== null) {
+                checkbox.checked = savedState === "true";
+            }
+        });
+    }
+
+    window.addEventListener('load', loadCheckboxStates);
+
+    const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+    checkboxes.forEach((checkbox) => {
+        checkbox.addEventListener('change', saveCheckboxStates);
+    });
+
 </script>
