--- a/views/shiftreports/shiftreportsscripts.ejs
+++ b/views/shiftreports/shiftreportsscripts.ejs
@@ -282,5 +282,29 @@
 
             btnClick();
         }
+
+        function saveCheckboxStates() {
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach((checkbox) => {
+                localStorage.setItem(checkbox.id, checkbox.checked);
+            });
+        }
+
+        function loadCheckboxStates() {
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach((checkbox) => {
+                const savedState = localStorage.getItem(checkbox.id);
+                if (savedState !== null) {
+                    checkbox.checked = savedState === "true";
+                }
+            });
+        }
+
+        window.addEventListener('load', loadCheckboxStates);
+
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach((checkbox) => {
+            checkbox.addEventListener('change', saveCheckboxStates);
+        });
     })
 </script>
